[fix] figure caption has wrong width in custom size

--- a/packages/obonode/obojobo-chunks-figure/viewer-component.scss
+++ b/packages/obonode/obojobo-chunks-figure/viewer-component.scss
@@ -44,6 +44,10 @@
 				margin: 0 auto;
 				max-width: calc(100% - 10px); //stylelint-disable-line unit-blacklist
 			}
+
+			figure {
+				margin: 0 auto;
+			}
 		}
 	}
 
